optimised navigation and folder structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -19,138 +19,157 @@
 
   <body>
     <nav id="navbar" class="navbar">
-      <div class="navbar__logo">
-        <span>Aditya</span>
-      </div>
+      <a class="navbar__logo" href="index.html">Aditya</a>
 
       <div class="navbar__items" id="navbarItems">
         <ul>
-          <li><span>Home</span></li>
-          <li><span>Works</span></li>
-          <li><span>About</span></li>
-          <li><span>Projects</span></li>
+          <li>
+            <a href="index.html"
+              >Home<i class="fa-solid fa-house-chimney navbar__items--icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="projects.html"
+              >Projects<i class="fa-solid fa-list-check navbar__items--icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="#"
+              >About<i
+                class="fa-solid fa-circle-question navbar__items--icon"
+              ></i
+            ></a>
+          </li>
+          <li>
+            <a href="#"
+              >Contact<i class="fa-solid fa-phone navbar__items--icon"></i
+            ></a>
+          </li>
         </ul>
-        <button id="buttonLetsChat" class="button button--lets-chat">
-          <span>Let's chat</span>
-        </button>
+        <button id="buttonLetsChat" class="button">Let's chat</button>
       </div>
 
-      <a class="navbar__hamberger-icon" onclick="toggleNavbar()">
+      <a class="navbar__hamberger_icon" onclick="toggleNavbar()">
         <i class="fa fa-bars fa-2xl"></i>
       </a>
+
+      <button
+        id="buttonArrowUp"
+        onclick="goTop()"
+      >
+        <i class="fa-solid fa-arrow-up"></i>
+      </button>
+
+      <button
+        id="buttonArrowDown"
+        onclick="goToNextSection()"
+      >
+        <i class="fa-solid fa-arrow-down"></i>
+      </button>
     </nav>
 
     <section id="introduction" class="introduction">
-      <article>
-        <h1 class="introduction__title">
-          <span>Hi! I am </span>
+      <article class="introduction__body">
+        <p class="introduction__body-title">
+          Hi! I am
           <i class="fa-solid fa-code"></i>
           <br />
           Aditya Ramdonee
-        </h1>
-
-        <p class="introduction__body">
-          My journey as a professional software engineer started
+        </p>
+        <br />
+        <p class="text-small">
+          My journey as a professional web developer started
           <strong>1.5 years</strong> ago.
         </p>
-
-        <div class="introduction__body_options">
-          <button id="buttonHireMe" class="button button--hire-me">
-            Hire Me
-          </button>
-          <button id="buttonViewProjects" class="button">
-            Projects
-            <span class="view-projects-icon">
-              <i class="fa-solid fa-arrow-up-right-from-square"></i>
-            </span>
-          </button>
-        </div>
       </article>
 
+      <div class="introduction__options">
+        <button id="buttonHireMe" class="button">Hire Me</button>
+        <button id="buttonViewProjects" class="button" onclick="viewProjects()">
+          Projects <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        </button>
+      </div>
+      <br />
       <article class="introduction__info">
         <div>
           <p>+4</p>
-          <p>Companies I have worked for</p>
+          <p class="text-small">Companies I have worked for</p>
         </div>
         <div>
           <p>+1</p>
-          <p>Projects completed</p>
+          <p class="text-small">Projects completed</p>
         </div>
         <div>
           <p>Contact</p>
-          <p>aramdonee16@gmail.com</p>
+          <p class="text-small">aramdonee16@gmail.com</p>
         </div>
       </article>
-
-      <a href="#portrait" class="arrow-down">
-        <i class="fa-solid fa-arrow-down fa-bounce fa-2xl"></i>
-      </a>
     </section>
 
-    <section id="portrait" class="portrait">
-      <article class="portrait__description">
-        <h2 class="portrait__description_title">Grow your business</h2>
+    <aside id="portrait" class="portrait">
+      <div class="portrait__description">
+        <span class="portrait__description_title">Let's grow together</span>
 
-        <h6 class="portrait__description_body">
-          Wanna expand your business and attract more potential paying clients?
-          <br />My friend, you have come to the right place!
-        </h6>
-      </article>
+        <p class="portrait__description_body">
+          You wish to expand your business and bring in more revenue ?
+          <br />You are at the right place.
+        </p>
+      </div>
 
-      <article class="portrait__links">
+      <div class="social-media">
         <a href="#"><i class="fa-brands fa-github fa-2xl"></i></a>
         <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
         <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-      </article>
-    </section>
+      </div>
+    </aside>
 
-    <section class="skills">
+    <section id="skills" class="skills">
       <article class="skills__technical">
         <h3>Technical skills</h3>
         <br />
         <ul>
           <li>
-            <h5>html</h5>
+            html
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>css</h5>
+            css
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>JavaScript</h5>
+            JavaScript
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>TypeScript</h5>
+            TypeScript
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Angular</h5>
+            Angular
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Angular Material</h5>
+            Angular Material
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Spring Boot</h5>
+            Spring Boot
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Bootstrap</h5>
+            Bootstrap
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Tailwind css</h5>
+            Tailwind css
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Google Apps Script</h5>
+            Google Apps Script
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Velo by Wix</h5>
+            Velo by Wix
             <i class="fa-solid fa-face-smile"></i>
           </li>
         </ul>
@@ -160,35 +179,31 @@
         <br />
         <ul>
           <li>
-            <h5>Problem solving</h5>
+            Problem solving
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Teamwork</h5>
+            Teamwork
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Effective communication</h5>
+            Effective communication
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Open mindedness</h5>
+            Open mindedness
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Integrity</h5>
+            Integrity
             <i class="fa-solid fa-face-smile"></i>
           </li>
           <li>
-            <h5>Adaptability</h5>
+            Adaptability
             <i class="fa-solid fa-face-smile"></i>
           </li>
         </ul>
       </article>
-
-      <a href="#navbar" class="arrow-up">
-        <i class="fa-solid fa-arrow-up fa-bounce fa-2xl"></i>
-      </a>
     </section>
   </body>
 </html>
