--- a/index.html
+++ b/index.html
@@ -19,43 +19,43 @@
 
   <body>
     <nav id="navbar" class="navbar">
-      <a class="navbar__logo" href="index.html">Aditya</a>
+      <div class="navbar-container">
+        <a class="navbar-logo" href="index.html">Aditya</a>
 
-      <div class="navbar__items" id="navbarItems">
+        <a class="navbar-hamberger_icon" onclick="toggleNavbar()">
+          <i class="fa fa-bars fa-2xl"></i>
+        </a>
+      </div>
+
+      <div id="navbarItems" class="navbar-items">
         <ul>
           <li>
             <a href="index.html"
-              >Home<i class="fa-solid fa-house-chimney navbar__items--icon"></i
+              >Home<i class="fa-solid fa-house-chimney"></i
             ></a>
           </li>
           <li>
             <a href="projects.html"
-              >Projects<i class="fa-solid fa-list-check navbar__items--icon"></i
+              >Projects<i class="fa-solid fa-list-check"></i
             ></a>
           </li>
           <li>
-            <a href="#"
-              >About<i
-                class="fa-solid fa-circle-question navbar__items--icon"
-              ></i
-            ></a>
+            <a href="#">About<i class="fa-solid fa-circle-question"></i></a>
           </li>
           <li>
-            <a href="#"
-              >Contact<i class="fa-solid fa-phone navbar__items--icon"></i
-            ></a>
+            <a href="#">Contact<i class="fa-solid fa-phone"></i></a>
           </li>
         </ul>
-        <button id="buttonLetsChat" class="button">Let's chat</button>
-      </div>
 
-      <a class="navbar__hamberger_icon" onclick="toggleNavbar()">
-        <i class="fa fa-bars fa-2xl"></i>
-      </a>
+        <button id="buttonLetsChat" class="button button-chat">
+          Let's chat
+        </button>
+      </div>
 
       <button
         id="buttonArrowUp"
         onclick="goTop()"
+        class="button button-arrow button-arrow-up"
       >
         <i class="fa-solid fa-arrow-up"></i>
       </button>
@@ -63,68 +63,71 @@
       <button
         id="buttonArrowDown"
         onclick="goToNextSection()"
+        class="button button-arrow button-arrow-down"
       >
         <i class="fa-solid fa-arrow-down"></i>
       </button>
     </nav>
+    <!-- no need topsection -->
+    <section id="topSection">
+      <section id="introduction" class="introduction">
+        <article>
+          <p class="text-xl">
+            Hi! I am
+            <i class="fa-solid fa-code"></i>
+            <br />
+            Aditya Ramdonee
+          </p>
+          <p class="text-sm">
+            My journey as a professional web developer started
+            <strong>1.5 years</strong> ago.
+          </p>
+        </article>
+        <div class="introduction-options">
+          <button class="button">Hire Me</button>
+          <button
+            id="buttonViewProjects"
+            class="button"
+            onclick="viewProjects()"
+          >
+            Projects <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </button>
+        </div>
+        <article class="introduction-info">
+          <div>
+            <p>+4</p>
+            <p class="text-sm">Companies I have worked for</p>
+          </div>
+          <div>
+            <p>+1</p>
+            <p class="text-sm">Projects completed</p>
+          </div>
+          <div>
+            <p>Contact</p>
+            <p class="text-sm">aramdonee16@gmail.com</p>
+          </div>
+        </article>
+      </section>
 
-    <section id="introduction" class="introduction">
-      <article class="introduction__body">
-        <p class="introduction__body-title">
-          Hi! I am
-          <i class="fa-solid fa-code"></i>
-          <br />
-          Aditya Ramdonee
-        </p>
-        <br />
-        <p class="text-small">
-          My journey as a professional web developer started
-          <strong>1.5 years</strong> ago.
-        </p>
-      </article>
+      <aside id="portrait" class="portrait">
+        <div class="portrait-description">
+          <span class="text-xxl">Let's grow together</span>
 
-      <div class="introduction__options">
-        <button id="buttonHireMe" class="button">Hire Me</button>
-        <button id="buttonViewProjects" class="button" onclick="viewProjects()">
-          Projects <i class="fa-solid fa-arrow-up-right-from-square"></i>
-        </button>
-      </div>
-      <br />
-      <article class="introduction__info">
-        <div>
-          <p>+4</p>
-          <p class="text-small">Companies I have worked for</p>
+          <p>
+            You wish to expand your business and bring in more revenue ?
+            <br />You are at the right place.
+          </p>
         </div>
-        <div>
-          <p>+1</p>
-          <p class="text-small">Projects completed</p>
+
+        <div class="social-media">
+          <a href="#"><i class="fa-brands fa-github fa-2xl"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
         </div>
-        <div>
-          <p>Contact</p>
-          <p class="text-small">aramdonee16@gmail.com</p>
-        </div>
-      </article>
+      </aside>
     </section>
-
-    <aside id="portrait" class="portrait">
-      <div class="portrait__description">
-        <span class="portrait__description_title">Let's grow together</span>
-
-        <p class="portrait__description_body">
-          You wish to expand your business and bring in more revenue ?
-          <br />You are at the right place.
-        </p>
-      </div>
-
-      <div class="social-media">
-        <a href="#"><i class="fa-brands fa-github fa-2xl"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-      </div>
-    </aside>
-
     <section id="skills" class="skills">
-      <article class="skills__technical">
+      <article>
         <h3>Technical skills</h3>
         <br />
         <ul>
@@ -174,7 +177,7 @@
           </li>
         </ul>
       </article>
-      <article class="skills__soft">
+      <article>
         <h3>Soft skills</h3>
         <br />
         <ul>
