--- a/projects.html
+++ b/projects.html
@@ -18,44 +18,60 @@
   </head>
   <body>
     <nav id="navbar" class="navbar">
-      <a class="navbar__logo" href="index.html">Aditya</a>
 
-      <div class="navbar__items" id="navbarItems">
+      <div class="navbar-container">
+        <a class="navbar-logo" href="index.html">Aditya</a>
+
+        <a class="navbar-hamberger_icon" onclick="toggleNavbar()">
+          <i class="fa fa-bars fa-2xl"></i>
+        </a>
+      </div>
+
+      <div id="navbarItems" class="navbar-items">
         <ul>
           <li>
             <a href="index.html"
-              >Home<i class="fa-solid fa-house-chimney navbar__items--icon"></i
+              >Home<i class="fa-solid fa-house-chimney"></i
             ></a>
           </li>
           <li>
             <a href="projects.html"
-              >Projects<i class="fa-solid fa-list-check navbar__items--icon"></i
+              >Projects<i class="fa-solid fa-list-check"></i
             ></a>
           </li>
           <li>
-            <a href="#"
-              >About<i
-                class="fa-solid fa-circle-question navbar__items--icon"
-              ></i
-            ></a>
+            <a href="#">About<i class="fa-solid fa-circle-question"></i></a>
           </li>
           <li>
-            <a href="#"
-              >Contact<i class="fa-solid fa-phone navbar__items--icon"></i
-            ></a>
+            <a href="#">Contact<i class="fa-solid fa-phone"></i></a>
           </li>
         </ul>
-        <button id="buttonLetsChat" class="button">Let's chat</button>
+
+        <button id="buttonLetsChat" class="button button-chat">
+          Let's chat
+        </button>
       </div>
 
-      <a class="navbar__hamberger_icon" onclick="toggleNavbar()">
-        <i class="fa fa-bars fa-2xl"></i>
-      </a>
+      <button
+        id="buttonArrowUp"
+        onclick="goTop()"
+        class="button button-arrow button-arrow-up"
+      >
+        <i class="fa-solid fa-arrow-up"></i>
+      </button>
+
+      <button
+        id="buttonArrowDown"
+        onclick="goToNextSection()"
+        class="button button-arrow button-arrow-down"
+      >
+        <i class="fa-solid fa-arrow-down"></i>
+      </button>
     </nav>
 
     <header id="bestProject" class="best_project">
       <article class="best_project__introduction">
-        <h1>My projects</h1>
+        <p class="text-xl">My projects</p>
         <br />
         <p>
           Coding is my passion. I do it at work, in my free time, on weekends
@@ -78,19 +94,21 @@
           </p>
         </div>
         <div class="card-options">
-          <button id="buttonGitHubBestproject" class="button">
+          <button class="button">
             GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
-          <button id="buttonViewLiveBestProject" class="button">
+          <button class="button">
             View live <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
         </div>
       </section>
     </header>
 
+    <div class="titleContainer">
+      <p class="title text-xl">Explore more!</p>
+    </div>
+
     <section id="projects" class="projects">
-      <h1 class="projects__title">Explore more!</h1>
-      <br />
       <section class="card">
         <img
           class="card-image"
